Changelog
=========

1.0b23 - Unreleased
-------------------

* Add support for LinguaPlone.
  [witsch]

* Update sample Solr buildout configuration and documentation to recommend a
  high enough default setting for maximum search results returned by Solr.
  This refs http://plone.org/products/collective.solr/issues/20
  [witsch]


1.0b22 - Released February 23, 2010
-----------------------------------

* Split out a ``BaseSolrConnectionConfig`` class, to be used for registering a
  non-persistent connection configuration.
  [hannosch]

* Fix bug regarding timeout locking.
  [witsch]

* Convert test setup to `collective.testcaselayer`.
  [witsch]

* Only apply timeout decorator when actually committing changes to Solr,
  also re-enabling the use of query parameters for maintenance views again.
  [witsch]

* We also need to change the ``SearchDispatcher`` to use the original method
  in case Solr isn't active.
  [hannosch]

* Changed the ``searchResults`` monkey to store and use the method found on
  the class instead of assuming it comes from the base class.  This makes
  things work with `LinguaPlone` which also patches this method.
  [hannosch]

* Add dutch translation.
  [WouterVH]

* Refactor buildout to allow running tests against Plone 4.x.
  [witsch]

* Optimize reindex behavior when populating the Solr index for the first time.
  [hannosch, witsch]

* Only register indexable attributes the old way on Plone 3.x.
  [jcbrand]

* Fix timeout decorator to work ttw.
  [hannosch, witsch]

* Add "z3c.autoinclude.plugin" entry point, so in Plone 3.3+ you can avoid
  loading the ZCML file.
  [hannosch]


1.0b21 - Released February 11, 2010
-----------------------------------

* Fix unindexing to not fetch more data from the objects than necessary.
  [witsch]

* Use decorator to lock timeouts and make sure the lock is always released.
  [witsch]

* Fix maintenance views to work without setting up a Solr connection first.
  [witsch]


1.0b20 - Released January 26, 2010