@@ -4,6 +4,10 @@ Changelog
 1.0b23 - Unreleased
 -------------------
 
+* Changed the GenericSetup export/import handler for the Solr manager to ignore
+  non-persistent utilities.
+  [hannosch]
+
 * Add support for LinguaPlone.
   [witsch]
 
